the fully completed version 1.2 of dhanvaanijya